Bug 1139831 - End timestamps are before start timestamps. r=baku, a=sledru